Scrollbar in mat0tab fixed

--- a/src/app/components/item-management/item-management.component.css
+++ b/src/app/components/item-management/item-management.component.css
@@ -1,8 +1,7 @@
-.mdc-tab__text-label {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.mat-mdc-tab-labels {
-  background-color: aliceblue;
+.button-wrapper {
+  min-height: 50px;
+  display: flex;
+  > mat-checkbox {
+    align-self: center;
+  }
 }
